[gd_scene load_steps=14 format=2]

[ext_resource path="res://characters_sprites/man_face_box_ (2).png" type="Texture" id=1]
[ext_resource path="res://characters_sprites/player_1_.gd" type="Script" id=2]
[ext_resource path="res://All_Screens_/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://music/290443__littlerobotsoundfactory__mouth-16.wav" type="AudioStream" id=4]
[ext_resource path="res://characters_sprites/man_face_box_ (4).png" type="Texture" id=5]
[ext_resource path="res://movement_touch_buttons_.tscn" type="PackedScene" id=6]
[ext_resource path="res://themes_for_font/SHOWG_THEME.tres" type="Theme" id=7]
[ext_resource path="res://music/_coin pickup sound_1_.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "anger",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "smile",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.4593, 36.2481 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41.2529, 35.385 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41.2529, 26.5762 )

[sub_resource type="RectangleShape2D" id=5]

[node name="player_1" type="KinematicBody2D"]
modulate = Color( 0.996078, 0.729412, 0.729412, 1 )
scale = Vector2( 0.6, 0.7 )
collision_mask = 8
collision/safe_margin = 0.01
moving_platform_apply_velocity_on_leave = 1
script = ExtResource( 2 )

[node name="player_controlers" parent="." instance=ExtResource( 6 )]

[node name="Score" type="Label" parent="player_controlers"]
margin_left = 23.0
margin_top = 11.0
margin_right = 327.0
margin_bottom = 72.0
rect_scale = Vector2( 0.619701, 0.635039 )
theme = ExtResource( 7 )
text = "Score: %o"

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -37.9742 )
scale = Vector2( 0.8, 0.76 )
frames = SubResource( 4 )
animation = "anger"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -36.2481 )
shape = SubResource( 1 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -208.858 )
drag_margin_right = 0.0
drag_margin_bottom = 0.2

[node name="area_pl_" type="Area2D" parent="."]
position = Vector2( 0, -37.9742 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_pl_"]
modulate = Color( 0.14902, 1, 0.054902, 1 )
position = Vector2( -1.92433e-06, -0.86301 )
shape = SubResource( 2 )

[node name="enemie_caught" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemie_caught"]
modulate = Color( 0.945098, 0.113725, 0.913725, 1 )
position = Vector2( 1.65706e-06, -24.8501 )
shape = SubResource( 3 )

[node name="Enemie_deth_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 7.363
pitch_scale = 0.86

[node name="coin_pickedup_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 23.929
pitch_scale = 0.79
attenuation = 1.03527

[node name="coin_caught" type="Area2D" parent="."]
position = Vector2( 0, -35.7143 )
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin_caught"]
scale = Vector2( 4.4, 4.1 )
shape = SubResource( 5 )

[connection signal="body_entered" from="area_pl_" to="." method="_on_area_pl__body_entered"]
[connection signal="body_entered" from="enemie_caught" to="." method="_on_enemie_caught_body_entered"]
[connection signal="body_entered" from="coin_caught" to="." method="_on_coin_caught_body_entered"]
